Resolves: tdf#122059 don't crash with no parent for tabpage

Change-Id: Id27609a86558094e6b53c763aebe77c97cc11672
Reviewed-on: https://gerrit.libreoffice.org/65148
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>